[gd_scene load_steps=26 format=3 uid="uid://c64y0nhq0sjg7"]

[ext_resource type="Script" path="res://scripts/scripts_scenes/joueur.gd" id="1_3cdjp"]
[ext_resource type="Texture2D" uid="uid://csn1tddlmbc1b" path="res://art/Sword/A1.png" id="2_fcwxd"]
[ext_resource type="Script" path="res://scripts/noms_collision_layers.gd" id="2_mru2o"]
[ext_resource type="Texture2D" uid="uid://ciywp21374gmw" path="res://art/Sword/A2.png" id="3_366qu"]
[ext_resource type="Script" path="res://scripts/composants/composant_degats.gd" id="3_ntgce"]
[ext_resource type="Texture2D" uid="uid://dqqtepttfdh8p" path="res://art/spritesheet_marche.png" id="4_ek3gl"]
[ext_resource type="Texture2D" uid="uid://bbii32e755s6n" path="res://art/Sword/A3.png" id="4_y56ly"]
[ext_resource type="Texture2D" uid="uid://cbl0lqxbrhx2c" path="res://art/Sword/A4.png" id="5_p5tf4"]
[ext_resource type="Texture2D" uid="uid://oj0bhtbm367d" path="res://art/Sword/A5.png" id="6_eo5sq"]
[ext_resource type="Texture2D" uid="uid://du5o5rqgb8wfg" path="res://art/Sword/A0.png" id="8_wfsre"]

[sub_resource type="Animation" id="Animation_hmpxl"]
resource_name = "Attaque"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attaque/Collisions_attaque:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attaque/Sprite_attaque:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attaque"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attaque/Sprite_attaque:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attaque/Collisions_attaque:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Attaque/Sprite_attaque:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_fl8q3"]
resource_name = "Idle_bas"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_lcwqs"]
resource_name = "Idle_droite"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_5qcf7"]
resource_name = "Idle_gauche"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_dioxc"]
resource_name = "Idle_haut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_t2ci7"]
resource_name = "Marche_bas"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collisions_joueur:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-12, -1), Vector2(-9, -1), Vector2(-8, -1), Vector2(-9, -1)]
}

[sub_resource type="Animation" id="Animation_3hnto"]
resource_name = "Marche_droite"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collisions_joueur:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-14, -2), Vector2(-11, -1)]
}

[sub_resource type="Animation" id="Animation_j7t1c"]
resource_name = "Marche_gauche"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collisions_joueur:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-12, -1), Vector2(-9, -1)]
}

[sub_resource type="Animation" id="Animation_cpnux"]
resource_name = "Marche_haut"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(1, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collisions_joueur:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-12, 0), Vector2(-9, 0), Vector2(-8, 0), Vector2(-9, 0)]
}

[sub_resource type="Animation" id="Animation_b78jf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attaque/Collisions_attaque:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attaque/Sprite_attaque:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attaque/Collisions_attaque:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attaque/Sprite_attaque:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Marche"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Spritesheet_marche:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Collisions_joueur:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Attaque/Sprite_attaque:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Spritesheet_marche:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Collisions_joueur:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n5ym6"]
resource_name = "roulade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet_marche:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collisions_joueur:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8icbj"]
_data = {
"Attaque": SubResource("Animation_hmpxl"),
"Idle_bas": SubResource("Animation_fl8q3"),
"Idle_droite": SubResource("Animation_lcwqs"),
"Idle_gauche": SubResource("Animation_5qcf7"),
"Idle_haut": SubResource("Animation_dioxc"),
"Marche_bas": SubResource("Animation_t2ci7"),
"Marche_droite": SubResource("Animation_3hnto"),
"Marche_gauche": SubResource("Animation_j7t1c"),
"Marche_haut": SubResource("Animation_cpnux"),
"RESET": SubResource("Animation_b78jf"),
"Roulade": SubResource("Animation_n5ym6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p7lot"]
radius = 12.0

[sub_resource type="SpriteFrames" id="SpriteFrames_memk3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fcwxd")
}, {
"duration": 1.0,
"texture": ExtResource("3_366qu")
}, {
"duration": 1.0,
"texture": ExtResource("4_y56ly")
}, {
"duration": 1.0,
"texture": ExtResource("5_p5tf4")
}, {
"duration": 1.0,
"texture": ExtResource("6_eo5sq")
}],
"loop": false,
"name": &"Attaque",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_wfsre")
}],
"loop": true,
"name": &"Marche",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_je6ld"]
a = Vector2(0, -80)
b = Vector2(0, 0)

[node name="Joueur" type="Area2D"]
collision_mask = 4
script = ExtResource("1_3cdjp")

[node name="Noms_collision_layers" type="Node" parent="."]
script = ExtResource("2_mru2o")

[node name="Composant_degats" type="Node" parent="."]
script = ExtResource("3_ntgce")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8icbj")
}

[node name="Spritesheet_marche" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_ek3gl")
hframes = 3
vframes = 4
frame = 4

[node name="Collisions_joueur" type="CollisionShape2D" parent="."]
position = Vector2(-12, -1)
shape = SubResource("CircleShape2D_p7lot")
disabled = true

[node name="Attaque" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite_attaque" type="AnimatedSprite2D" parent="Attaque"]
visible = false
texture_filter = 1
position = Vector2(34, 9)
sprite_frames = SubResource("SpriteFrames_memk3")
animation = &"Marche"
offset = Vector2(0, -8.5)

[node name="Collisions_attaque" type="CollisionShape2D" parent="Attaque"]
shape = SubResource("SegmentShape2D_je6ld")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="degats_pris" from="Composant_degats" to="." method="_on_composant_degats_degats_pris"]
[connection signal="animation_finished" from="Animations" to="." method="_on_animations_animation_finished"]
